src/styles/_QA.scss
.QA {
  width: 50vw;
  font-family: $QA-text;
  color: $text-color;
  font-weight: 400;
  padding: 32px 0px;
  // padding-bottom:20px;
  border-bottom: 1px solid $lines-color;

  h3 {
  text-align: left;
  margin-left: 10px;
  margin-bottom: 16px;
  font-weight:500;
  font-size:1.3em;
}

  ul {
    display: flex;
    padding: 0;
  }

  li {
    list-style: none;
    padding: 10px 16px;
    margin: 5px 10px;
    font-size: 1.1em;
  }
}

/* Default styling for answers */
.answer {
  cursor: pointer;
  padding: 10px;
  margin: 5px 0;
  border: 2px solid $lines-color;
  border-radius: 8px;
 }

 /* Styling for the selected answer */
 .answer-selected {
  background-color: #dff0d8;
 }

  /* Styling for the correct answer */
  .answer-correct {
    background-color: #164b02;

  }
  .answer-incorrect {
    background-color: #a41810;

  }

